ping_pong/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-count-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: requestcount
  template:
    metadata:
      labels:
        app: requestcount
    spec:
      volumes:
        - name: log-volume
          persistentVolumeClaim:
            claimName: log-claim # this is the name of the volume claim we created
      containers:
        - name: pingpong
          image: ping-pong:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: log-volume
            mountPath: /usr/src/app/files
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-input-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loginput
  template:
    metadata:
      labels:
        app: loginput
    spec:
      containers:
        - name: loginput
          image: log-input-go:latest 
          imagePullPolicy: IfNotPresent
